# mockbucket

./: .dockerignore  .gitignore  .goreleaser.yaml  AGENTS.md  Agent.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  mockbucket.example.yaml  mockbucket.yaml  plan.md  seed.example.yaml  seed.yaml
.github/workflows/: ci.yaml  docker.yaml  gate.yaml  release.yaml
cmd/mockbucketd/: main.go
docker/: config.yaml
internal/config/: config.go  config_test.go
internal/core/: errors.go  models.go
internal/frontends/: frontends.go  frontends_test.go  root.go
internal/httpx/: errors.go  middleware.go  middleware_test.go
internal/iam/: policy.go  policy_test.go  session.go  session_test.go
internal/seed/: apply.go  generate.go  seed.go  seed_test.go
internal/server/: aws_server_fixture_test.go  aws_server_http_test.go  aws_server_sts_test.go  aws_server_test.go  azure_datalake_server_test.go  azure_server_test.go  frontend_contract_test.go  gcs_server_advanced_test.go  gcs_server_auth_test.go  gcs_server_fixture_test.go  gcs_server_test.go  runtime_fixture_test.go  server.go  server_test.go
internal/storage/: object_store_fs.go  store.go  (+1 more)
scripts/compat/: README.md  aws.py  awscli.sh  azure.py  azure_blob.py  azure_datalake.py  boto3.py  common.sh  compat.py  duckdb.sh  gcs.py  parquet.py  pyproject.toml  run_all.py  run_all.sh  spark_s3a.sh
scripts/compat/src/mockbucket_compat/: __init__.py  __main__.py  aws.py  cli.py  compat.py  gcs.py  parquet.py  pyspark.py  suite.py
scripts/compat/tests/: test_cli.py  test_compat.py
(+33 files in other folders)
